tests/valid/core/actors-inline.coil
' @test valid
' @covers ACTORS
' @description ACTORS declaration in inline form

ACTORS analyst, client

SEND
  FOR @client
  <<
  Hello.
  >>
END

EXIT
